Screen overflow and Ui issues fixed

--- a/src/pages/HomeHero/styles.scss
+++ b/src/pages/HomeHero/styles.scss
@@ -9,7 +9,9 @@
 }
 .hero__scrollcontent {
   margin-top: 40px;
+  cursor: pointer;
 }
 .arrow {
   margin-top: 8px;
+  // cursor: pointer;
 }
